# horoscope-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  todo.md
redisdata/: dump.rdb
src/bot/: __main__.py  configuration.py
src/bot/clients/: __init__.py  horoscope_api.py
src/bot/handlers/: __init__.py
src/bot/handlers/user/: __init__.py  callbacks.py  messages.py  states.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/services/: __init__.py  cached_horoscope.py
src/bot/utils/: constans.py  helpers.py  ui_commands.py
