[project]
name = "horoscope-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.setuptools.packages.find]
where = ["src"]
